--- a/lwc/cnxApp/cnxApp.css
+++ b/lwc/cnxApp/cnxApp.css
@@ -28,6 +28,7 @@
   border: 1px solid #000000;
   transition: all 0.3s linear;
   cursor: pointer;
+  text-decoration: none;
 }
 .banner-btn:hover {
   background: transparent;
