--- a/lwc/navbar/navbar.css
+++ b/lwc/navbar/navbar.css
@@ -1,64 +1,78 @@
 .navbar {
-    position: sticky;
-    top: 0;
-    height: 60px;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    background-color: #000000;
-    z-index: 1;
-  }
-  .navbar-center {
-    width: 100%;
-    max-width: 1170px;
-    margin: 0 auto;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 1.5rem;
-  }
-  .nav-icon {
-    font-size: 1.5rem;
-  }
-  .cart-btn {
-    position: relative;
-    cursor: pointer;
-  }
-  .cart-items {
-    position: absolute;
-    top: -8px;
-    right: -8px;
-    background: #ff0000;
-    padding: 0 5px;
-    border-radius: 30%;
-    color:  #fff;
-  }
+  position: sticky;
+  top: 0;
+  height: 40px;
+  width: 100%;
+  display: block;
+  align-items: center;
+  background-color: #000000;
+  z-index: 1;
+}
 
-  .navbar-center[c-navbar_navbar]{
-    color: white;
-    background-color: #000000;
-  }
+.navbar-center {
+  width: 100%;
+  /* max-width: 1170px; */
+  margin: 0 auto;
+  display: block;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1.5rem;
+}
 
-  .loginBtn {
-    color: #000000;
-    font-weight: 500;
-    background-color: #fff;
-    cursor: pointer;
-    border-radius: 2px;
-    height: 32px;
-    padding: 5px 40px;
-    border: 1px solid #dbdbdb;
-  }
+.nav-icon {
+  font-size: 1.5rem;
+}
 
-  .registerBtn{
-    color: #000000;
-    font-weight: 500;
-    background-color: #fff;
-    cursor: pointer;
-    border-radius: 2px;
-    height: 32px;
-    padding: 5px 40px;
-    border: 1px solid #dbdbdb;
-    position: absolute;
-    right: 200px;
-  }
+.cart-btn {
+  position: relative;
+  cursor: pointer;
+}
+
+.cart-items {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background: #ff0000;
+  padding: 0 5px;
+  border-radius: 30%;
+  color: #fff;
+}
+
+.navbar-center[c-navbar_navbar] {
+  color: white;
+  background-color: #000000;
+}
+
+.buttonCss {
+  display: inline-block;
+  padding: 0.35em 1.2em;
+  border: 0.2em solid #FFFFFF;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 2em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  color: #FFFFFF;
+  text-align: center;
+  transition: all 0.2s;
+}
+
+.buttonCss:hover {
+  color: #000000;
+  background-color: #FFFFFF;
+}
+
+/* The sticky class is added to the navbar with JS when it reaches its scroll position */
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
+
+.sticky+.content {
+  padding-top: 60px;
+}
